# Model-Driven-Framework

./: .gitignore  .gitmodules
.planning/: GUIDELINES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-schema-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-mcp-server-model-io/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-03-04-model-based-project-framework-design.md  2026-03-05-mdf-development-workflow.md  2026-03-09-repo-split-design.md  2026-03-09-repo-split-implementation.md  milestone2-flow.md
mdf-server/: pyproject.toml
mdf-server/mdf_server/: server.py
mdf-server/mdf_server/pycca/: __init__.py
mdf-server/mdf_server/schema/: drawio_schema.py  yaml_schema.py
mdf-server/mdf_server/tools/: drawio.py  model_io.py  simulation.py  validation.py
mdf-server/tests/: test_drawio_schema.py  test_model_io.py  test_roundtrip.py  test_templates.py  test_yaml_schema.py
mdf-sim/docs/: 2026-03-06-simulation-engine-design.md  2026-03-08-test-harness-design.md
templates/: CLASS_DIAGRAM.yaml.tmpl  DOMAINS.yaml.tmpl  STATE_DIAGRAM.yaml.tmpl  behavior-class.md.tmpl  behavior-domain.md.tmpl  behavior-state.md.tmpl
(+1 files in other folders)
