[project]
name = "mdf-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "fastmcp>=3.1.0,<4.0.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
mdf-server = "mdf_server.server:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
