[project]
name = "mdf-server"
version = "0.1.0"
description = "MDF MCP server — Claude interface for mdf-sim"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
    "mdf-sim",
]

[project.scripts]
mdf-server = "mdf_server.server:main"

[tool.uv.sources]
mdf-sim = { path = "../mdf-sim", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
